[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/paperairplane.png" type="Texture" id=1]
[ext_resource path="res://PaperAirplanePlayer.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.62375
height = 27.0279

[sub_resource type="Animation" id=2]
resource_name = "PlayerFall"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6, 5, 4, 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "PlayerRise"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 3, 2, 1, 0, 4, 5, 6 ]
}

[node name="PaperAirplanePlayer" type="KinematicBody2D"]
script = ExtResource( 2 )
speed = Vector2( 300, 300 )
gravity = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.72469, 0.425102 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PlayerFall = SubResource( 2 )
anims/PlayerRise = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 4
frame = 3

[node name="CollisionX" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -6 )
collision_mask = 22

[node name="CollisionY" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 22

[node name="CollisionZ" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 22
